--- a/resources/html/editar-perfil-cliente.html
+++ b/resources/html/editar-perfil-cliente.html
@@ -6,8 +6,8 @@
     <title>Phirson Pets</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/home/style.css">
-    <link rel="stylesheet" href="css/home/perfil-cliente.css">
-    <link rel="stylesheet" href="css/home/editar-perfil-cliente.css">
+    <link rel="stylesheet" href="css/user/perfil-cliente.css">
+    <link rel="stylesheet" href="css/user/editar-perfil-cliente.css">
   </head>
   <body>
       <header>
@@ -34,30 +34,30 @@
           <div class="container pt-1 pb-1">
             <div class="row">
               <div class="col-3">
-                <div class="container-imagem-perfil pb-2">
-                  <img src="imagens/home/perfil-cliente/imagem-perfil-cliente.jpg" alt="Imagem de Perfil" class="imagem-perfil-cliente rounded-circle">
+                <div class="container-imagem-perfil">
+                  <img src="imagens/user/perfil-cliente/imagem-perfil-cliente.jpg" alt="Imagem de Perfil" class="imagem-perfil-cliente rounded-circle">
                 </div>
-                  <div class="container-button-escolher-imagem pt-2">
+                  <div class="container-button-escolher-imagem">
                     <div class="custom-file">
-                      <input type="file" class="button-escolher-imagem custom-file-input" id="inputGroupFile01">
-                      <label class="custom-file-label" for="inputGroupFile01">Escolher Imagem</label>
+                      <input type="file" class="button-escolher-imagem custom-file-input">
+                      <label class="custom-file-label">Escolher Imagem</label>
                     </div>
                   </div>
-                <h2 class="nome-cliente pb-4 pl-4">Patrick da Silva</h2>
-                <h5 class="text-tier-cliente pl-4">Tier do Cliente</h5>
-                <div class="container-tier-cliente pl-3">
-                  <img src="imagens/home/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cliente">
-                  <img src="imagens/home/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cliente">
+                <h2 class="nome-cliente">Patrick da Silva</h2>
+                <h5 class="text-tier-cliente">Tier do Cliente</h5>
+                <div class="container-tier-cliente">
+                  <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cliente">
+                  <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cliente">
                 </div>
               </div>
 
               <div class="col-6">
-                <h1 class="text-descricao-cuidador">Breve Descrição</h1>
-                  <div class="container-text-area pb-4 pt-2">
+                <h1 class="text-descricao-cliente">Breve Descrição</h1>
+                  <div class="container-text-area">
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
                   </div>
-                  <div class="container-input-celular form-group mx-sm-3 mb-2 d-flex">
-                    <img src="imagens/home/perfil-cuidador/icone-whatsapp-rosa.svg" alt="Icone Whatsapp" class="icone-celular pr-2">
+                  <div class="container-input-celular form-group mx-sm-3 d-flex">
+                    <img src="imagens/user/perfil-cuidador/icone-whatsapp-rosa.svg" alt="Icone Whatsapp" class="icone-celular">
                     <input type="text" class="form-control" id="celular" placeholder="(11) 99999-9999">
                   </div>
                   <div class="container-button-tornarse-cuidador">
@@ -71,7 +71,7 @@
           </div>
       </main>
 
-<footer class="page-footer font-small pt-4 pb-4 d-flex justify-content-end flex-column">
+<footer class="page-footer font-small d-flex justify-content-end flex-column">
   <div class="container">
     <div class="text-center position-absolute container-logo">
       <img src="imagens/home/logo-phirson.png" alt="Logo Phirson Pets" class="rodapePrincipal-logo">
