--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -96,7 +96,7 @@
           </div>
       </main>
 
-<footer class="page-footer font-small pt-4 pb-4 d-flex justify-content-end flex-column">
+<footer class="page-footer font-small d-flex justify-content-end flex-column">
   <div class="container">
     <div class="text-center position-absolute container-logo">
       <img src="imagens/home/logo-phirson.png" alt="Logo Phirson Pets" class="rodapePrincipal-logo">
