--- a/resources/html/perfil-cliente.html
+++ b/resources/html/perfil-cliente.html
@@ -6,7 +6,7 @@
     <title>Phirson Pets</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/home/style.css">
-    <link rel="stylesheet" href="css/home/perfil-cliente.css">
+    <link rel="stylesheet" href="css/user/perfil-cliente.css">
   </head>
   <body>
       <header>
@@ -33,38 +33,38 @@
           <div class="container pt-1 pb-1">
             <div class="row">
               <div class="col">
-                <div class="container-imagem-perfil pb-2">
-                  <img src="imagens/home/perfil-cliente/imagem-perfil-cliente.jpg" alt="Imagem de Perfil" class="imagem-perfil-cliente rounded-circle">
+                <div class="container-imagem-perfil">
+                  <img src="imagens/user/perfil-cliente/imagem-perfil-cliente.jpg" alt="Imagem de Perfil" class="imagem-perfil-cliente rounded-circle">
                 </div>
-                <h2 class="nome-cliente pb-4 pl-4">Patrick da Silva</h2>
-                <h5 class="text-tier-cliente pl-4">Tier do Cliente</h3>
-                <div class="container-tier-cliente pl-3">
-                  <img src="imagens/home/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cliente">
-                  <img src="imagens/home/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cliente">
+                <h2 class="nome-cliente">Patrick da Silva</h2>
+                <h5 class="text-tier-cliente">Tier do Cliente</h3>
+                <div class="container-tier-cliente">
+                  <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cliente">
+                  <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cliente">
                 </div>
-                <div class="container-pets pt-4 pb-5">
+                <div class="container-pets">
                   <div class="row">
                     <div class="col-md-auto">
                       <div class="container-flechas">
-                        <img src="imagens/home/perfil-cliente/icone-editar-pets.svg" alt="Flecha Subir" class="icone-editar-pets">
-                        <img src="imagens/home/perfil-cliente/icone-adicionar-pets.svg" alt="Flecha Descer" class="icone-adicionar-pets">
+                        <img src="imagens/user/perfil-cliente/icone-editar-pets.svg" alt="Flecha Subir" class="icone-editar-pets">
+                        <img src="imagens/user/perfil-cliente/icone-adicionar-pets.svg" alt="Flecha Descer" class="icone-adicionar-pets">
                       </div>
                     </div>
                     <div class="col-md-auto">
                       <div class="container-imagem-perfil-cachorro">
-                        <img src="imagens/home/perfil-cliente/imagem-perfil-cachorro.jpg" alt="Imagem de Perfil" class="imagem-perfil-cachorro rounded-circle">
+                        <img src="imagens/user/perfil-cliente/imagem-perfil-cachorro.jpg" alt="Imagem de Perfil" class="imagem-perfil-cachorro rounded-circle">
                       </div>
                     </div>
                     <div class="col-md-auto">
                       <h5 class="nome-pet">Athos</h5>
                       <div class="container-tier-cachorro">
-                        <img src="imagens/home/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
-                        <img src="imagens/home/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
-                        <img src="imagens/home/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
-                        <img src="imagens/home/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
-                        <img src="imagens/home/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
+                        <img src="imagens/user/perfil-cliente/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cachorro">
                       </div>
-                      <h5 class="raca-pet pt-3">Labrador</h5>
+                      <h5 class="raca-pet">Labrador</h5>
                       <h5 class="sexo-pet">Macho</h5>
                     </div>
                   </div>
@@ -77,14 +77,14 @@
                      ever since the 1500s, when an unknown printer took a galley of
                      type and scrambled it to make a type specimen book.
                   </p>
-                <h5 class="celular pt-4"><img src="imagens/home/perfil-cliente/icone-whatsapp-rosa.svg" alt="Icone Whatsapp" class="icone-celular pr-1">(11) 99999-9999</h5>
+                <h5 class="celular"><img src="imagens/user/perfil-cliente/icone-whatsapp-rosa.svg" alt="Icone Whatsapp" class="icone-celular">(11) 99999-9999</h5>
               </div>
               <div class="col">
                 <div class="container-historico-clientes">
                   <div class="row">
                     <div class="col">
                       <div class="container-imagem-perfil-cuidador">
-                        <img src="imagens/home/perfil-cliente/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
+                        <img src="imagens/user/perfil-cliente/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
                       </div>
                     </div>
                     <div class="col-5">
@@ -95,8 +95,8 @@
                     </div>
                     <div class="col">
                       <div class="container-flechas">
-                        <img src="imagens/home/perfil-cliente/flecha-subir.svg" alt="Flecha Subir" class="icone-flecha-subir">
-                        <img src="imagens/home/perfil-cliente/flecha-descer.svg" alt="Flecha Descer" class="icone-flecha-descer">
+                        <img src="imagens/user/perfil-cliente/flecha-subir.svg" alt="Flecha Subir" class="icone-flecha-subir">
+                        <img src="imagens/user/perfil-cliente/flecha-descer.svg" alt="Flecha Descer" class="icone-flecha-descer">
                       </div>
                     </div>
                   </div>
@@ -106,7 +106,7 @@
           </div>
       </main>
 
-<footer class="page-footer font-small pt-4 pb-4 d-flex justify-content-end flex-column fixed-bottom">
+<footer class="page-footer font-small d-flex justify-content-end flex-column fixed-bottom">
   <div class="container">
     <div class="text-center position-absolute container-logo">
       <img src="imagens/home/logo-phirson.png" alt="Logo Phirson Pets" class="rodapePrincipal-logo">
