--- a/resources/html/perfil-cuidador.html
+++ b/resources/html/perfil-cuidador.html
@@ -6,7 +6,7 @@
     <title>Phirson Pets</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/home/style.css">
-    <link rel="stylesheet" href="css/home/perfil-cuidador.css">
+    <link rel="stylesheet" href="css/user/perfil-cuidador.css">
   </head>
   <body>
       <header>
@@ -33,26 +33,26 @@
           <div class="container pt-1 pb-1">
             <div class="row">
               <div class="col">
-                <div class="container-imagem-perfil pb-2">
-                  <img src="imagens/home/perfil-cuidador/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
+                <div class="container-imagem-perfil">
+                  <img src="imagens/user/perfil-cuidador/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
                 </div>
-                <div class="container-icones-animais pb-3 pl-1">
-                  <img src="imagens/home/perfil-cuidador/icone-cachorro.svg" alt="Icone Cachorro" class="icones-animais">
-                  <img src="imagens/home/perfil-cuidador/icone-gato.svg" alt="Icone Gato" class="icones-animais">
-                  <img src="imagens/home/perfil-cuidador/icone-peixe.svg" alt="Icone Peixe" class="icones-animais">
-                  <img src="imagens/home/perfil-cuidador/icone-passarinho.svg" alt="Icone Passarinho" class="icones-animais">
-                  <img src="imagens/home/perfil-cuidador/icone-cavalo.svg" alt="Icone Cavalo" class="icones-animais">
+                <div class="container-icones-animais">
+                  <img src="imagens/user/perfil-cuidador/icone-cachorro.svg" alt="Icone Cachorro" class="icones-animais">
+                  <img src="imagens/user/perfil-cuidador/icone-gato.svg" alt="Icone Gato" class="icones-animais">
+                  <img src="imagens/user/perfil-cuidador/icone-peixe.svg" alt="Icone Peixe" class="icones-animais">
+                  <img src="imagens/user/perfil-cuidador/icone-passarinho.svg" alt="Icone Passarinho" class="icones-animais">
+                  <img src="imagens/user/perfil-cuidador/icone-cavalo.svg" alt="Icone Cavalo" class="icones-animais">
                 </div>
-                <h2 class="nome-cuidador pb-4 pl-4">Beatriz da Silva</h2>
-                <h5 class="text-tier-cuidador pl-4">Tier do Cuidador</h3>
-                <div class="container-tier-cuidador pl-3">
-                  <img src="imagens/home/perfil-cuidador/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cuidador">
-                  <img src="imagens/home/perfil-cuidador/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cuidador">
-                  <img src="imagens/home/perfil-cuidador/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cuidador">
-                  <img src="imagens/home/perfil-cuidador/icone-meia-estrela.svg" alt="Icone Meia Estrela" class="icones-tier-cuidador">
+                <h2 class="nome-cuidador">Beatriz da Silva</h2>
+                <h5 class="text-tier-cuidador">Tier do Cuidador</h3>
+                <div class="container-tier-cuidador">
+                  <img src="imagens/user/perfil-cuidador/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cuidador">
+                  <img src="imagens/user/perfil-cuidador/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cuidador">
+                  <img src="imagens/user/perfil-cuidador/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cuidador">
+                  <img src="imagens/user/perfil-cuidador/icone-meia-estrela.svg" alt="Icone Meia Estrela" class="icones-tier-cuidador">
                 </div>
-                <h4 class="text-cuidados-realizados pt-1">Cuidados</h4>
-                <h4 class="cuidados-realizados">1000 <img src="imagens/home/perfil-cuidador/icone-gato.svg" alt="Icone Gato" class="icones-cuidados"></h4>
+                <h4 class="text-cuidados-realizados">Cuidados</h4>
+                <h4 class="cuidados-realizados">1000 <img src="imagens/user/perfil-cuidador/icone-gato.svg" alt="Icone Gato" class="icones-cuidados"></h4>
               </div>
               <div class="col-6">
                 <h1 class="text-descricao-cuidador">Breve Descrição</h1>
@@ -71,14 +71,14 @@
                   </dl>
                       Caso necessite de um cuidado por mais de um dia será dobrado o valor.
                   </p>
-                <h5 class="celular pt-4"><img src="imagens/home/perfil-cuidador/icone-whatsapp-rosa.svg" alt="Icone Whatsapp" class="icone-celular pr-1">(11) 99999-9999</h5>
+                <h5 class="celular"><img src="imagens/user/perfil-cuidador/icone-whatsapp-rosa.svg" alt="Icone Whatsapp" class="icone-celular">(11) 99999-9999</h5>
               </div>
               <div class="col">
                 <div class="container-historico-clientes">
                   <div class="row">
                     <div class="col">
                       <div class="container-imagem-perfil-cliente">
-                        <img src="imagens/home/perfil-cuidador/imagem-perfil.jpg" alt="Imagem de Perfil" class="imagem-perfil-cliente rounded-circle">
+                        <img src="imagens/user/perfil-cuidador/imagem-perfil.jpg" alt="Imagem de Perfil" class="imagem-perfil-cliente rounded-circle">
                       </div>
                     </div>
                     <div class="col-5">
@@ -89,8 +89,8 @@
                     </div>
                     <div class="col">
                       <div class="container-flechas">
-                        <img src="imagens/home/perfil-cuidador/flecha-subir.svg" alt="Flecha Subir" class="icone-flecha-subir">
-                        <img src="imagens/home/perfil-cuidador/flecha-descer.svg" alt="Flecha Descer" class="icone-flecha-descer">
+                        <img src="imagens/user/perfil-cuidador/flecha-subir.svg" alt="Flecha Subir" class="icone-flecha-subir">
+                        <img src="imagens/user/perfil-cuidador/flecha-descer.svg" alt="Flecha Descer" class="icone-flecha-descer">
                       </div>
                     </div>
                   </div>
@@ -100,7 +100,7 @@
           </div>
       </main>
 
-<footer class="page-footer font-small pt-4 pb-4 d-flex justify-content-end flex-column">
+<footer class="page-footer font-small d-flex justify-content-end flex-column">
   <div class="container">
     <div class="text-center position-absolute container-logo">
       <img src="imagens/home/logo-phirson.png" alt="Logo Phirson Pets" class="rodapePrincipal-logo">
