--- a/resources/html/editar-perfil-cuidador.html
+++ b/resources/html/editar-perfil-cuidador.html
@@ -6,8 +6,8 @@
     <title>Phirson Pets</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/home/style.css">
-    <link rel="stylesheet" href="css/home/perfil-cuidador.css">
-    <link rel="stylesheet" href="css/home/editar-perfil-cuidador.css">
+    <link rel="stylesheet" href="css/user/perfil-cuidador.css">
+    <link rel="stylesheet" href="css/user/editar-perfil-cuidador.css">
   </head>
   <body>
       <header>
@@ -34,60 +34,60 @@
           <div class="container pt-1 pb-1">
             <div class="row">
               <div class="col-3">
-                <div class="container-imagem-perfil pb-2">
-                  <img src="imagens/home/perfil-cuidador/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
-                  <div class="container-button-escolher-imagem pt-2">
+              <div class="container-imagem-perfil">
+                  <img src="imagens/user/perfil-cuidador/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
+                  <div class="container-button-escolher-imagem">
                     <div class="custom-file">
-                      <input type="file" class="button-escolher-imagem custom-file-input" id="inputGroupFile01">
-                      <label class="custom-file-label" for="inputGroupFile01">Escolher Imagem</label>
+                      <input type="file" class="button-escolher-imagem custom-file-input">
+                      <label class="custom-file-label">Escolher Imagem</label>
                     </div>
                   </div>
                 </div>
-                <div class="container-icones-animais d-flex pb-3 pr-1 pl-1">
+                <div class="container-icones-animais d-flex">
                   <div class="container-checkbox-cachorro">
-                    <input type="checkbox" id="checkbox-cachorro pr-1 pr-1" class="checkbox-cachorro">
-                    <img src="imagens/home/perfil-cuidador/icone-cachorro.svg" alt="Icone Cachorro" class="icones-animais">
+                    <input type="checkbox" id="checkbox-cachorro" class="checkbox-cachorro">
+                    <img src="imagens/user/perfil-cuidador/icone-cachorro.svg" alt="Icone Cachorro" class="icones-animais">
                   </div>
-                  <div class="container-checkbox-gato pr-1 pl-1">
+                  <div class="container-checkbox-gato">
                     <input type="checkbox" id="checkbox-gato" class="checkbox-gato">
-                    <img src="imagens/home/perfil-cuidador/icone-gato.svg" alt="Icone Gato" class="icones-animais">
+                    <img src="imagens/user/perfil-cuidador/icone-gato.svg" alt="Icone Gato" class="icones-animais">
                   </div>
-                  <div class="container-checkbox-peixe pr-1 pl-1">
+                  <div class="container-checkbox-peixe">
                     <input type="checkbox" id="checkbox-peixe" class="checkbox-peixe">
-                    <img src="imagens/home/perfil-cuidador/icone-peixe.svg" alt="Icone Peixe" class="icones-animais">
+                    <img src="imagens/user/perfil-cuidador/icone-peixe.svg" alt="Icone Peixe" class="icones-animais">
                   </div>
-                  <div class="container-checkbox-passarinho pr-1 pl-1">
+                  <div class="container-checkbox-passarinho">
                     <input type="checkbox" id="checkbox-passarinho" class="checkbox-passarinho">
-                    <img src="imagens/home/perfil-cuidador/icone-passarinho.svg" alt="Icone Passarinho" class="icones-animais">
+                    <img src="imagens/user/perfil-cuidador/icone-passarinho.svg" alt="Icone Passarinho" class="icones-animais">
                   </div>
-                  <div class="container-checkbox-cavalo pr-1 pl-1">
+                  <div class="container-checkbox-cavalo">
                     <input type="checkbox" id="checkbox-cavalo" class="checkbox-cavalo">
-                    <img src="imagens/home/perfil-cuidador/icone-cavalo.svg" alt="Icone Cavalo" class="icones-animais">
+                    <img src="imagens/user/perfil-cuidador/icone-cavalo.svg" alt="Icone Cavalo" class="icones-animais">
                   </div>
                 </div>
-                <h2 class="nome-cuidador pb-4 pl-4">Beatriz da Silva</h2>
-                <h5 class="text-tier-cuidador pl-4">Tier do Cuidador</h3>
-                <div class="container-tier-cuidador pl-3">
-                  <img src="imagens/home/perfil-cuidador/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cuidador">
-                  <img src="imagens/home/perfil-cuidador/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cuidador">
-                  <img src="imagens/home/perfil-cuidador/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cuidador">
-                  <img src="imagens/home/perfil-cuidador/icone-meia-estrela.svg" alt="Icone Meia Estrela" class="icones-tier-cuidador">
+                <h2 class="nome-cuidador">Beatriz da Silva</h2>
+                <h5 class="text-tier-cuidador">Tier do Cuidador</h3>
+                <div class="container-tier-cuidador">
+                  <img src="imagens/user/perfil-cuidador/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cuidador">
+                  <img src="imagens/user/perfil-cuidador/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cuidador">
+                  <img src="imagens/user/perfil-cuidador/icone-estrela.svg" alt="Icone Estrela" class="icones-tier-cuidador">
+                  <img src="imagens/user/perfil-cuidador/icone-meia-estrela.svg" alt="Icone Meia Estrela" class="icones-tier-cuidador">
                 </div>
-                <h4 class="text-cuidados-realizados pt-1">Cuidados</h4>
-                <h4 class="cuidados-realizados">1000 <img src="imagens/home/perfil-cuidador/icone-gato.svg" alt="Icone Gato" class="icones-cuidados"></h4>
+                <h4 class="text-cuidados-realizados">Cuidados</h4>
+                <h4 class="cuidados-realizados">1000 <img src="imagens/user/perfil-cuidador/icone-gato.svg" alt="Icone Gato" class="icones-cuidados"></h4>
               </div>
 
               <div class="col-6">
                 <h1 class="text-descricao-cuidador">Breve Descrição</h1>
-                  <div class="container-text-area pb-4 pt-2">
+                  <div class="container-text-area">
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
                   </div>
                 <h1 class="text-servicos">Serviços</h1>
-                  <div class="container-text-area pb-4 pt-2">
+                  <div class="container-text-area">
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
                   </div>
-                  <div class="container-input-celular form-group mx-sm-3 mb-2 d-flex">
-                    <img src="imagens/home/perfil-cuidador/icone-whatsapp-rosa.svg" alt="Icone Whatsapp" class="icone-celular pr-2">
+                  <div class="container-input-celular form-group mx-sm-3 d-flex">
+                    <img src="imagens/user/perfil-cuidador/icone-whatsapp-rosa.svg" alt="Icone Whatsapp" class="icone-celular">
                     <input type="text" class="form-control" id="celular" placeholder="(11) 99999-9999">
                   </div>
                   <div class="container-button-salvar">
@@ -98,7 +98,7 @@
           </div>
       </main>
 
-<footer class="page-footer font-small pt-4 pb-4 d-flex justify-content-end flex-column">
+<footer class="page-footer font-small d-flex justify-content-end flex-column">
   <div class="container">
     <div class="text-center position-absolute container-logo">
       <img src="imagens/home/logo-phirson.png" alt="Logo Phirson Pets" class="rodapePrincipal-logo">
