--- a/resources/html/perfil-cliente.html
+++ b/resources/html/perfil-cliente.html
@@ -80,26 +80,74 @@
                 <h5 class="celular"><img src="imagens/user/perfil-cliente/icone-whatsapp-rosa.svg" alt="Icone Whatsapp" class="icone-celular">(11) 99999-9999</h5>
               </div>
               <div class="col">
-                <div class="container-historico-clientes">
-                  <div class="row">
-                    <div class="col">
-                      <div class="container-imagem-perfil-cuidador">
-                        <img src="imagens/user/perfil-cliente/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
+                <div class="container-historico-cuidadores">
+                  <table>
+                    <tr>
+                      <div class="row">
+                        <div class="col-5">
+                          <div class="container-imagem-perfil-cuidador">
+                            <img src="imagens/user/perfil-cliente/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
+                          </div>
+                        </div>
+                        <div class="col-6">
+                          <h5 class="nome-cuidador">Beatriz da Silva</h5>
+                          <div class="container-button-avaliar-cuidador rounded-pill">
+                            <button type="submit" name="Avaliar Cuidador" class=" btn btn-sm button-avaliar-cuidador">Avaliar Cuidador</button>
+                          </div>
+                        </div>
                       </div>
-                    </div>
-                    <div class="col-5">
-                      <h5 class="nome-cuidador">Beatriz da Silva</h5>
-                      <div class="container-button-avaliar-cuidador rounded-pill">
-                        <button type="submit" name="Avaliar Cuidador" class=" btn btn-sm button-avaliar-cuidador">Avaliar Cuidador</button>
+                    </tr>
+
+                    <tr>
+                      <div class="row">
+                        <div class="col-5">
+                          <div class="container-imagem-perfil-cuidador">
+                            <img src="imagens/user/perfil-cliente/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
+                          </div>
+                        </div>
+                        <div class="col-6">
+                          <h5 class="nome-cuidador">Beatriz da Silva</h5>
+                          <div class="container-button-avaliar-cuidador rounded-pill">
+                            <button type="submit" name="Avaliar Cuidador" class=" btn btn-sm button-avaliar-cuidador">Avaliar Cuidador</button>
+                          </div>
+                        </div>
                       </div>
-                    </div>
-                    <div class="col">
-                      <div class="container-flechas">
-                        <img src="imagens/user/perfil-cliente/flecha-subir.svg" alt="Flecha Subir" class="icone-flecha-subir">
-                        <img src="imagens/user/perfil-cliente/flecha-descer.svg" alt="Flecha Descer" class="icone-flecha-descer">
+                    </tr>
+
+                    <tr>
+                      <div class="row">
+                        <div class="col-5">
+                          <div class="container-imagem-perfil-cuidador">
+                            <img src="imagens/user/perfil-cliente/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
+                          </div>
+                        </div>
+                        <div class="col-6">
+                          <h5 class="nome-cuidador">Beatriz da Silva</h5>
+                          <div class="container-button-avaliar-cuidador rounded-pill">
+                            <button type="submit" name="Avaliar Cuidador" class=" btn btn-sm button-avaliar-cuidador">Avaliar Cuidador</button>
+                          </div>
+                        </div>
                       </div>
-                    </div>
-                  </div>
+                    </tr>
+
+                    <tr>
+                      <div class="row">
+                        <div class="col-5">
+                          <div class="container-imagem-perfil-cuidador">
+                            <img src="imagens/user/perfil-cliente/imagem-perfil-cuidador.jpg" alt="Imagem de Perfil" class="imagem-perfil-cuidador rounded-circle">
+                          </div>
+                        </div>
+                        <div class="col-6">
+                          <h5 class="nome-cuidador">Beatriz da Silva</h5>
+                          <div class="container-button-avaliar-cuidador rounded-pill">
+                            <button type="submit" name="Avaliar Cuidador" class=" btn btn-sm button-avaliar-cuidador">Avaliar Cuidador</button>
+                          </div>
+                        </div>
+                      </div>
+                    </tr>
+
+                  </table>
+
                 </div>
               </div>
             </div>
