--- a/resources/html/perfil-cuidador.html
+++ b/resources/html/perfil-cuidador.html
@@ -75,27 +75,72 @@
               </div>
               <div class="col">
                 <div class="container-historico-clientes">
-                  <div class="row">
-                    <div class="col">
-                      <div class="container-imagem-perfil-cliente">
-                        <img src="imagens/user/perfil-cuidador/imagem-perfil.jpg" alt="Imagem de Perfil" class="imagem-perfil-cliente rounded-circle">
+                  <table>
+                    <tr>
+                      <div class="row">
+                        <div class="col-5">
+                          <div class="container-imagem-perfil-cliente">
+                            <img src="imagens/user/perfil-cuidador/imagem-perfil.jpg" alt="Imagem de Perfil" class="imagem-perfil-cliente rounded-circle">
+                          </div>
+                        </div>
+                        <div class="col-6">
+                          <h5 class="nome-cliente">Patrick da Silva</h5>
+                          <div class="container-button-avaliar-cliente rounded-pill">
+                            <button type="submit" name="Avaliar Cliente" class=" btn btn-sm button-avaliar-cliente">Avaliar Cliente</button>
+                          </div>
+                        </div>
+                    </tr>
+
+                    <tr>
+                      <div class="row">
+                        <div class="col-5">
+                          <div class="container-imagem-perfil-cliente">
+                            <img src="imagens/user/perfil-cuidador/imagem-perfil.jpg" alt="Imagem de Perfil" class="imagem-perfil-cliente rounded-circle">
+                          </div>
+                        </div>
+                        <div class="col-6">
+                          <h5 class="nome-cliente">Patrick da Silva</h5>
+                          <div class="container-button-avaliar-cliente rounded-pill">
+                            <button type="submit" name="Avaliar Cliente" class=" btn btn-sm button-avaliar-cliente">Avaliar Cliente</button>
+                          </div>
+                        </div>
                       </div>
-                    </div>
-                    <div class="col-5">
-                      <h5 class="nome-cliente">Patrick da Silva</h5>
-                      <div class="container-button-avaliar-cliente rounded-pill">
-                        <button type="submit" name="Avaliar Cliente" class=" btn btn-sm button-avaliar-cliente">Avaliar Cliente</button>
+                    </tr>
+
+                    <tr>
+                      <div class="row">
+                        <div class="col-5">
+                          <div class="container-imagem-perfil-cliente">
+                            <img src="imagens/user/perfil-cuidador/imagem-perfil.jpg" alt="Imagem de Perfil" class="imagem-perfil-cliente rounded-circle">
+                          </div>
+                        </div>
+                        <div class="col-6">
+                          <h5 class="nome-cliente">Patrick da Silva</h5>
+                          <div class="container-button-avaliar-cliente rounded-pill">
+                            <button type="submit" name="Avaliar Cliente" class=" btn btn-sm button-avaliar-cliente">Avaliar Cliente</button>
+                          </div>
+                        </div>
                       </div>
-                    </div>
-                    <div class="col">
-                      <div class="container-flechas">
-                        <img src="imagens/user/perfil-cuidador/flecha-subir.svg" alt="Flecha Subir" class="icone-flecha-subir">
-                        <img src="imagens/user/perfil-cuidador/flecha-descer.svg" alt="Flecha Descer" class="icone-flecha-descer">
+                    </tr>
+
+                    <tr>
+                      <div class="row">
+                        <div class="col-5">
+                          <div class="container-imagem-perfil-cliente">
+                            <img src="imagens/user/perfil-cuidador/imagem-perfil.jpg" alt="Imagem de Perfil" class="imagem-perfil-cliente rounded-circle">
+                          </div>
+                        </div>
+                        <div class="col-6">
+                          <h5 class="nome-cliente">Patrick da Silva</h5>
+                          <div class="container-button-avaliar-cliente rounded-pill">
+                            <button type="submit" name="Avaliar Cliente" class=" btn btn-sm button-avaliar-cliente">Avaliar Cliente</button>
+                          </div>
+                        </div>
                       </div>
-                    </div>
+                    </tr>
+                  </table>
                   </div>
                 </div>
-              </div>
             </div>
           </div>
       </main>
